force-app/main/default/objects/Charge_Detail__c/Charge_Detail__c.object-meta.xml
<CustomObject>
    <label>Charge Detail</label>
    <nameField>
        <label>Charge Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>