force-app/main/default/objects/Charge_Detail__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <formula>Unit__r.Total_Carpet_Area_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpet Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>