force-app/main/default/objects/Charge_Detail__c/fields/Charge_Description__c.field-meta.xml
<CustomField>
    <fullName>Charge_Description__c</fullName>
    <label>Charge Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>