force-app/main/default/objects/Charge_Detail__c/fields/Charge_SGST__c.field-meta.xml
<CustomField>
    <fullName>Charge_SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>