force-app/main/default/objects/Charge_Detail__c/fields/Charge_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>