force-app/main/default/objects/Charge_Detail__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Charge Details</relationshipLabel>
    <relationshipName>Charge_Details</relationshipName>
    <type>Lookup</type>
</CustomField>